--- a/core/ui/flair/Flair.pug
+++ b/core/ui/flair/Flair.pug
@@ -3,8 +3,8 @@ script.
 	export subredditName = ''
 	emojis = {}
 	html = flair.text
-	if MACHINE['emojis@' + subredditName]
-		for emoji in MACHINE['emojis@' + subredditName].split(',')
+	if browser['emojis@' + subredditName]
+		for emoji in browser['emojis@' + subredditName].split(',')
 			[code, id] = emoji.split(':')
 			emojis[code] = id
 		html =
