--- a/src/ui/submissions/Post.pug
+++ b/src/ui/submissions/Post.pug
@@ -1,21 +1,13 @@
 script.
 	export id = ''
-	if !$objects[id] then GET_OBJECT(id)
-	$: {
-		post = $objects[id]
-		loading = $loading[id]
-		error = $error[id]
-	}
 	$: {
 		scoreText = switch
 			when post.isStickied then 'Stickied'
 			when isFinite(post.score) then post.score
 			else '?'
 	}
-	galleryExpanded = false
-	w = 640
 
-{#if post}
+WithAsyncData(id={id} let:data={post})
 	article.post
 		.row
 			.state
@@ -27,33 +19,9 @@ script.
 			h1.title {post.title}
 		.row
 			.score {scoreText}
-			.content
-				{#if content.type === 'LINK'}
-					a(href={content.href}) {content.href}
-				{:else if content.type === 'TEXT'}
-					{#if content.text}
-						.text {@html content.text}
-					{:else}
-						span.no-submission-text (No post text.)
-				{:else if content.type === 'IMAGE_NATIVE'}
-					{#each content.images as image, i}
-						{#if i === 0 || galleryExpanded}
-							figure
-								Image(image={image} maxW={w})
-								{#if image.caption}
-									figcaption {image.caption.t}
-										{#if image.caption.u}
-											a(href={image.caption.u}) {image.caption.u}
-					{#if content.images.length > 1 && !galleryExpanded}
-						button(on:click={() => galleryExpanded = true}) Expand {content.images.length - 1} more images...
-				{:else if content.type === 'VIDEO_NATIVE'}
-					Video(data={content.video} w={w})
-				{:else if content.type === 'VIDEO_IFRAME'}
-					iframe(src={content.src} allowfullscreen='true' allow={content.allow} title='Video from {(new URL(content.src)).host}' style='width: {w}px; height: {Math.ceil(w / 16 * 9)}px')
-				{:else}
-					span.unidentified-content (Unidentified content.)
-{:else if loading}
-{:else if error}
+			PostContent(content={post.content} width={640})
+		.row
+			CommentTreeList(idTreeList={post.commentIdTreeList})
 
 style.
 	.row
@@ -70,10 +38,3 @@ style.
 	.title
 		font-size 1.5em
 		font-weight normal
-	.no-submission-text
-	.unidentified-content
-		opacity 0.5
-	figure
-		cursor zoom-in
-		& + figure
-			margin-top 4px
