internals: refactor WIP: better API error handling, file structure

--- a/src/ui/_stylesheets/utility.styl
+++ b/src/ui/_stylesheets/utility.styl
@@ -4,7 +4,13 @@
 .downvoted
 	color lightsteelblue
 
-.hide-scrollbar
+.scroll-x-hidden
+	overflow-x auto
+	scrollbar-width none
+	&::-webkit-scrollbar
+		display none
+.scroll-y-hidden
+	overflow-y auto
 	scrollbar-width none
 	&::-webkit-scrollbar
 		display none
