--- a/src/ui/components/RedditData.pug
+++ b/src/ui/components/RedditData.pug
@@ -1,23 +1,17 @@
 script.
-	import { apiDownloads } from '../../api/index.coffee'
-
+	import { datasets } from '../../api/datasets/store.coffee'
 	export id = ''
-	export staleAfter = NaN
-	
-	$: {
-		object = $apiObjects[id]
-		if object
-			{ status, data } = object
-		else
-			status = 'none'
-	}
-	if status != 'complete' then download(id)
+	$: { dataset = $datasets[id] }
+	if not dataset and not dataset.loading
+		$datasets.load(id)
+
+slot(data={dataset.data} error={dataset.error} loading={dataset.loading})
 
 {#if status === 'complete' || status === 'partial'}
 	slot(data={object})
 	{#if object.vintage > Date.minutes(staleAfter)}
 		.overlay.stale Data is {object.vintage} minutes out of date.
-			button Reload?
+			button(on:click={$datasets.load(id)}) Reload?
 {:else if status === 'loading'}
 	{#if $$slots.loading}
 		slot(name='loading')
