--- a/src/ui/styles/base.styl
+++ b/src/ui/styles/base.styl
@@ -1,3 +1,5 @@
+@import './vars.styl'
+
 // Box sizing, margin, padding
 *
 	box-sizing border-box
@@ -43,3 +45,15 @@ a
 code
 pre
 	font-family var(--font-face-mono)
+
+// Scrollbars
+.scroll-x-hidden
+	overflow-x auto
+	scrollbar-width none
+	&::-webkit-scrollbar
+		display none
+.scroll-y-hidden
+	overflow-y auto
+	scrollbar-width none
+	&::-webkit-scrollbar
+		display none
