--- a/src/ui/components/post/Comment.pug
+++ b/src/ui/components/post/Comment.pug
@@ -24,7 +24,8 @@ script.
 style.
 	[role=comment]
 		width 480px
+		padding 0 10px
 	ol
 		border-left 1px solid rgb(96,96,96) // Neutral 4-0
-		padding-left 20px
-		margin 5px
+		padding-left 0
+		margin 20px
