--- a/src/ui/materials/ColoredTextButton.pug
+++ b/src/ui/materials/ColoredTextButton.pug
@@ -6,4 +6,7 @@ button {text}
 style.
 	button
 		color rgb(64,84,199) // Indigo-D 4-16
-		margin 5px
+		margin 0 20px
+		padding 0
+		background inherit
+		border 0
