--- a/src/ui/materials/HtmlMarkdown.pug
+++ b/src/ui/materials/HtmlMarkdown.pug
@@ -6,12 +6,21 @@ script.
 style.
 	:global(.md)
 		word-break break-word
-		margin 5px
-
-		*:first-child
-			margin-top 0
-		*:last-child
-			margin-bottom 0
+		font-size 15px
+		margin 15px 10px
+		margin-top 5px
+	:global(.md *:first-child)
+		margin-block-start 0
+	:global(.md *:last-child)
+		margin-block-end 0
+	:global(.md blockquote)
+		color green
+		position relative
+		margin-inline-start 1ch
+	:global(.md blockquote::before)
+		content '>'
+		position absolute
+		left -1ch
 
 		// Paragraphs
 		p
