--- a/src/ui/components/post/Byline.pug
+++ b/src/ui/components/post/Byline.pug
@@ -20,19 +20,20 @@ address
 		span.flair {flairText}
 
 style.
-	.name
+	address
+		margin 5px 10px
 	.flair
-		padding 2px 8px
+	.name
 		border-radius 5px
 		display inline-block
+		font-size 12px
 		font-style normal
 		font-weight bold
-		font-size 12px
 		margin 2px 0
+		padding 2px 8px
+	.flair
+		opacity 0.5
 	.name
-		margin-left 10px
 		background gray
 		color white
 		opacity 0.3
-	.flair
-		opacity 0.5
