--- a/src/ui/components/post/Comment.pug
+++ b/src/ui/components/post/Comment.pug
@@ -1,7 +1,7 @@
 script.
-	import AuthorBadge from './AuthorBadge.pug'
-	import ColoredTextButton from '../../materials/ColoredTextButton.pug'
-	import HtmlMarkdown from '../../materials/HtmlMarkdown.pug'
+	import ActionText from '../../materials/ActionText.pug'
+	import Byline from './Byline.pug'
+	import FormattedMarkdownHtml from '../../materials/FormattedMarkdownHtml.pug'
 	import datasets from '../../../api/datasets/store.coffee'
 	export id = ''
 	export showReplies = true
@@ -10,22 +10,21 @@ script.
 
 {#if comment}
 	article(role='comment')
-		AuthorBadge(name={comment.author} distinguish={comment.distinguished} isOP={comment.is_submitter} flairText={comment.author_flair_text})
-		HtmlMarkdown(html={comment.body_html})
+		Byline(name={comment.author} distinguish={comment.distinguished} isOP={comment.is_submitter} flairText={comment.author_flair_text})
+		FormattedMarkdownHtml(html={comment.body_html})
 		{#if showReplies && comment.replies.length > 0}
 			ol
 				{#each comment.replies as id}
 					svelte:self(id={id})
 				{#if comment.more_replies}
-					ColoredTextButton(text='More replies...')
+					ActionText(text='More replies...')
 				{#if comment.deeper_replies}
-					ColoredTextButton(text='Continue this thread...')
+					ActionText(text='Continue this thread...')
 
 style.
 	[role=comment]
 		width 480px
-		padding 0 10px
 	ol
 		border-left 1px solid rgb(96,96,96) // Neutral 4-0
-		padding-left 0
 		margin 20px
+		padding-left 10px
