internals: make markdown styles global CSS; restructure UI file hierarchy

--- a/src/ui/components/post/Post.pug
+++ b/src/ui/components/post/Post.pug
@@ -1,5 +1,5 @@
 script.
-	import ActionText from '../../materials/ActionText.pug'
+	import ActionText from '../generic/ActionText.pug'
 	import Byline from './Byline.pug'
 	import Comment from './Comment.pug'
 	import datasets from '../../../api/datasets/store.coffee'
