--- a/src/ui/components/post/Comment.pug
+++ b/src/ui/components/post/Comment.pug
@@ -1,7 +1,6 @@
 script.
-	import ActionText from '../../materials/ActionText.pug'
+	import ActionText from '../generic/ActionText.pug'
 	import Byline from './Byline.pug'
-	import FormattedMarkdownHtml from '../../materials/FormattedMarkdownHtml.pug'
 	import datasets from '../../../api/datasets/store.coffee'
 	export id = ''
 	export showReplies = true
@@ -11,9 +10,10 @@ script.
 {#if comment}
 	article(role='comment')
 		Byline(name={comment.author} distinguish={comment.distinguished} isOP={comment.is_submitter} flairText={comment.author_flair_text})
-		FormattedMarkdownHtml(html={comment.body_html})
+		section.comment-body
+			{@html comment.body_html.slice(16, -6)}
 		{#if showReplies && comment.replies.length > 0}
-			ol
+			ol.comment-replies
 				{#each comment.replies as id}
 					svelte:self(id={id})
 				{#if comment.more_replies}
@@ -24,7 +24,9 @@ script.
 style.
 	[role=comment]
 		width 480px
-	ol
+	.comment-body
+		font-size 15px
+	.comment-replies
 		border-left 1px solid rgb(96,96,96) // Neutral 4-0
 		margin 20px
 		padding-left 10px
