--- a/src/ui/assets/global.styl
+++ b/src/ui/assets/global.styl
@@ -7,15 +7,14 @@
 // Body
 body
 	font-family system-ui
+	margin 0
 
 // Paragraphs
 p
-	margin-top 1em
-	overflow-wrap break-word
-blockquote + p
 	margin-top 0.5em
+	overflow-wrap break-word
 hr
-	margin-top 1em
+	margin-top 0.5em
 	border 0
 	height 1px
 	background rgba(0,0,0,0.5)
@@ -23,14 +22,15 @@ hr
 // Verbatim text
 blockquote
 	color green
-	position relative
 	margin-inline-start 1ch
+	margin-top 0.5em
+	position relative
 blockquote::before
 	content '>'
 	left -1ch
 	position absolute
 pre
-	margin-top 1em
+	margin-top 0.5em
 	display inline-block
 	white-space pre-wrap
 
@@ -45,13 +45,13 @@ pre
 
 // Lists
 ol
-	margin-top 0.5em
 	list-style decimal
-	padding-left 16px
-ul
 	margin-top 0.5em
+	padding-inline-start 2ch
+ul
 	list-style disc
-	padding-left 16px
+	margin-top 0.5em
+	padding-inline-start 2ch
 
 // Headers
 h1
