--- a/src/ui/assets/global.styl
+++ b/src/ui/assets/global.styl
@@ -82,6 +82,10 @@ tr:first-child td
 	padding-top 0.5em
 
 // Media
+figure
+	margin 0
 img
+	border 1px solid
+	display block
 	max-width 100%
 	height auto
