--- a/src/ui/assets/global.styl
+++ b/src/ui/assets/global.styl
@@ -13,11 +13,14 @@ body
 p
 	margin-top 0.5em
 	overflow-wrap break-word
+	width 480px
 hr
-	margin-top 0.5em
+	background rgba(0,0,0,0.5)
 	border 0
 	height 1px
-	background rgba(0,0,0,0.5)
+	margin-inline 0
+	margin-top 0.5em
+	width 480px
 
 // Verbatim text
 blockquote
@@ -25,6 +28,7 @@ blockquote
 	margin-inline-start 1ch
 	margin-top 0.5em
 	position relative
+	width 480px
 blockquote::before
 	content '>'
 	left -1ch
@@ -32,6 +36,7 @@ blockquote::before
 pre
 	margin-top 0.5em
 	display inline-block
+	min-width 480px
 	white-space pre-wrap
 
 // Spoilers
@@ -48,10 +53,12 @@ ol
 	list-style decimal
 	margin-top 0.5em
 	padding-inline-start 2ch
+	width 480px
 ul
 	list-style disc
 	margin-top 0.5em
 	padding-inline-start 2ch
+	width 480px
 
 // Headers
 h1
@@ -63,12 +70,14 @@ h6
 	margin-top 1em
 	font-weight normal
 	font-size 1.25em
+	width 480px
 
 // Tables
 table
 	margin-top 1em
 	display inline-block
 	max-width 100%
+	min-width 480px
 	overflow auto
 	white-space pre
 thead
@@ -87,5 +96,3 @@ figure
 img
 	border 1px solid
 	display block
-	max-width 100%
-	height auto
