--- a/src/ui/components/post/Post.pug
+++ b/src/ui/components/post/Post.pug
@@ -12,8 +12,8 @@ script.
 {#if post}
 	article(role='post')
 		header.post-header
-			h1 {post.title}
 			Byline(name={post.author} distinguish={post.distinguish} isOP={true} flairText={post.author_flair_text})
+			h1 {post.title}
 		section.post-body
 			{#if post.format === 'self'}
 				{@html post.selftext_html.slice(31, -20)}
@@ -21,7 +21,7 @@ script.
 			{:else if post.format === 'media'}
 				{#each post.media as media}
 					{#if media.video_url}
-						MediaPlayer(audio_url={media.video_audio_url} video_height={media.video_height} video_url={media.video_url} video_width={media.video_width})
+						MediaPlayer(audio_url={media.video_audio_url} video_aspect_ratio={media.video_aspect_ratio} video_url={media.video_url} video_width={media.video_width})
 					{:else if media.gif_url}
 						figure
 							figcaption
@@ -31,7 +31,7 @@ script.
 						figure
 							figcaption
 							picture
-								source(srcset={media.image_url_1080} media='(min-width: 1200px)')
+								source(srcset={media.image_url_960})
 								img(src={media.image_url})
 			{:else if post.format === 'embed'}
 			{:else if post.format === 'link'}
@@ -45,20 +45,16 @@ script.
 
 style.
 	[role=post]
-		align-items center
 		display flex
 		flex-flow column nowrap
 		padding 60px 0
-		width 100%
+		padding-left 33%
+		width 50%
 	.post-body
 		margin-top 30px
-		min-width 1080px
 	.post-header
 		h1
-			font-size 29px
-			font-weight 100
-		width 1080px
+			font-family monospace
 	.post-replies
 		margin-top 15px
 		padding-inline-start 0
-		width 1080px
