post: show link for poll content (because not really supported by API)

--- a/src/ui/components/post/Post.pug
+++ b/src/ui/components/post/Post.pug
@@ -19,6 +19,7 @@ script.
 				.post-selftext
 					{@html post.selftext_html.slice(31, -20)}
 			{:else if post.format === 'poll'}
+				a(href={post.url} rel='external noopener preconnect') {post.url}
 			{:else if post.format === 'media'}
 				{#each post.media as media}
 					{#if media.video_url}
