post: prototype listing nav; work on layout

--- a/src/ui/assets/global.styl
+++ b/src/ui/assets/global.styl
@@ -74,21 +74,17 @@ h6
 
 // Tables
 table
+	font-size 13px
 	margin-top 1em
-	display inline-block
-	max-width 100%
-	min-width 480px
-	overflow auto
-	white-space pre
-thead
-	border-bottom 1px solid
+	white-space nowrap
 td
 th
 	border-right 2em solid transparent
 	&:last-child
 		border-right 0
-tr:first-child td
-	padding-top 0.5em
+th
+	font-weight normal
+	text-align left
 
 // Media
 figure
