--- a/src/ui/components/listing/Listing.pug
+++ b/src/ui/components/listing/Listing.pug
@@ -9,27 +9,15 @@ script.
 	datasets.subscribeToKey(id, (value) -> { data: itemIds } = value)
 
 .listing
-	section.headlines
-		{#if itemIds && itemIds.length}
-			{#each itemIds as itemId}
-				{#if itemId.idType === 't3'}
-					Headline(id={itemId} onSelect={() => selectedId = itemId})
-	section.selected
-		{#if itemIds && itemIds.length}
-			{#each itemIds as itemId}
-				{#if itemId.idType === 't3'}
-					{#if itemId === selectedId}
-						Post(id={itemId})
-
+	{#if itemIds && itemIds.length}
+		{#each itemIds as itemId}
+			{#if itemId.idType === 't3'}
+				Headline(id={itemId} onSelect={() => selectedId = itemId})
+			{#if itemId === selectedId}
+				Post(id={itemId})
 style.
-	.headlines
-		border 1px solid
-		left 160px
-		padding 30px
-		position fixed
-		top 160px
-	.selected
+	.listing
 		align-items center
 		display flex
 		flex-flow column nowrap
-		width 100%
+		padding 30px
